--- a/Emodetection/Emodetection.css
+++ b/Emodetection/Emodetection.css
@@ -1,3 +1,32 @@
-.a{
-    margin: 0 auto;
+@font-face{
+    font-family: "Abhaya-Bold";
+    src:url("/font/AbhayaLibre-Bold.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-ExtraBold";
+    src:url("/font/AbhayaLibre-ExtraBold.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-Medium";
+    src:url("/font/AbhayaLibre-Medium.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-Regular";
+    src:url("/font/AbhayaLibre-Regular.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-SemiBold";
+    src:url("/font/AbhayaLibre-SemiBold.ttf")
+  }
+.cc{
+    margin-top: 30px;
+    margin-left: 22%;
+}
+a{
+    color: white;
+    margin-left: 100px;
+    margin-top: 100px;
+    font-size: 20px;
+    font-family: Abhaya-Regular;
+    text-decoration: none;
 }
