--- a/ARpackage/ARpackage.css
+++ b/ARpackage/ARpackage.css
@@ -1,5 +1,25 @@
+@font-face{
+    font-family: "Abhaya-Bold";
+    src:url("/font/AbhayaLibre-Bold.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-ExtraBold";
+    src:url("/font/AbhayaLibre-ExtraBold.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-Medium";
+    src:url("/font/AbhayaLibre-Medium.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-Regular";
+    src:url("/font/AbhayaLibre-Regular.ttf");
+  }
+  @font-face{
+    font-family: "Abhaya-SemiBold";
+    src:url("/font/AbhayaLibre-SemiBold.ttf")
+  }
 .mingmu {
-    margin-top:750px;
+    margin-top:680px;
     margin-left:550px;
 }
 .qingre {
@@ -17,4 +37,12 @@
 .jianfei {
     margin-top:360px;
     margin-left:550px;
+}
+a{
+    color: black;
+    margin-left: 150px;
+    margin-top: 100px;
+    font-size: 25px;
+    font-family: Abhaya-Regular;
+    text-decoration: none;
 }
